Added code in IplStatsServiceImpl